# CliqueClac

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md
data/: caveman100.graphml  caveman3000.graphml  caveman500.graphml  facebook.graphml  generatecavemangraph.py  netscience.graphml  snaptogml.sh  test1.graphml
doc/: Doxyfile
src/: bronkerbosch.cpp  bronkerbosch.h  enumeratecliques.cpp  enumeratecliques.h  enumeratecliques.hpp  fromgml.cpp  fromgraphml.cpp  main.cpp  moddecomp.cpp  moddecomp.hpp  parsegml.cpp  parsegraphml.cpp  parsegraphml.hpp  writegraph.cpp  writegraph.hpp
src/fmdm/: dm.c  dm.hpp  dm_english.h  dm_types.h  fromgml.cpp  parsegml.cpp  parsegml.h  random.c
src/quick-cliques/: LinkedList.c  LinkedList.h  LinkedList.hpp  MemoryManager.h  adjlist_algorithm.c  degeneracy_algorithm.c  degeneracy_algorithm.h  degeneracy_algorithm.hpp  degeneracy_helper.c  hybrid_algorithm.c  misc.c  misc.h  tomita_algorithm.c
